refactor: 댓글 목록 조회 및 검색 API 통합
- `/comments/search` API 제거하고 `/comments` API에서 검색 기능을 처리하도록 변경
- `query` 파라미터가 없으면 전체 댓글 조회, 있으면 해당 키워드 포함 댓글만 검색하도록 수정
- `CdCommentService.getComments()`에서 전체 조회 및 검색을 동시에 처리하도록 변경
- 컨트롤러 및 서비스 코드 정리